<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AnnouncementView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reply_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:listitem="@layout/item_reply">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reply_to_send"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Reply"
                android:inputType="textMultiLine"
                android:paddingHorizontal="8dp" />

            <ImageButton
                android:id="@+id/reply_send_button"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/tranparent"
                android:elevation="0dp"
                android:onClick="enterReply"
                android:scaleType="fitCenter"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_send_icon" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
